# frydom

./: .cedar  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  HOWTO.rst  LICENCE  README.md  ROADMAP.rst  build_FRyDoM.py  cloc.sh  export_hdf5.py  setup.py
src/frydom/: CMakeLists.txt  frydom.h  version.cpp.in  version.h
tests/: CMakeLists.txt  PoC_hub_installation.cpp  PoC_hub_installation_makers.cpp  ResourcesPath.conf.cmake  URL_DEMO_DATA.conf.cmake  bench_DTMB5512_captive.cpp  bench_SphereDecay.cpp  bench_SphereRegular.cpp  demo_O3_juin_2017.cpp  frydom_config.in  test_CompositeMorisonModel.cpp  test_CurrentPolarCoeffs.cpp  test_FrBody_.cpp  test_FrEquilibriumFrame.cpp  test_IRF_ForwardSpeed.cpp  test_MorisonModel.cpp  test_TimeRecorder.cpp  test_anchored_boat_current.cpp  test_anchored_boat_current_fea_cable.cpp  test_anchored_platform_waves.cpp  test_body_mapper.cpp  test_current-wind_relative_velocity.cpp  test_current_standard_force.cpp  test_dynamic_wave_probe.cpp  test_fea_cable_with_body.cpp  test_geographicLib.cpp  test_hub_installation.cpp  test_hydrostatic_new_hdb.cpp  test_links.cpp  test_load_HDB.cpp  test_motors.cpp  test_pendulum.cpp  test_pendulum_catenary.cpp  test_radiation_model.cpp  test_shell.cpp  test_sphere_irregular.cpp  test_timezonelib.cpp  test_tug.cpp  test_tug_refactoring.cpp  test_unrolling_catenary_line.cpp  (+4 more)
tests/GoogleTest/: CMakeLists.txt  test_FrBody_.cpp  test_FrBody_old.cpp  test_FrCurrentForce_.cpp  test_FrFlowBase.cpp  test_FrFlowForce.cpp  test_FrForce_.cpp  test_FrFrame_.cpp  test_FrFreeSurface_.cpp  test_FrFunction.cpp  test_FrGeographicServices.cpp  test_FrITTCResistance.cpp  test_FrInertia.cpp  test_FrLinearDamping_.cpp  test_FrLinearHydrostaticForce_.cpp  test_FrLinks.cpp  test_FrManoeuvringDamping.cpp  test_FrMorisonElement_.cpp  test_FrNode_.cpp  test_FrQuadraticDamping.cpp  test_FrRecorder_.cpp  test_FrRotation_.cpp  test_FrStandardCurrentForce.cpp  test_FrStandardWindForce.cpp  test_FrUniformField.cpp  test_FrWaveField_.cpp  test_FrWaveSpectrum.cpp  test_FrWindForce_.cpp  test_internal.cpp
tests/TestNonRegression/: CMakeLists.txt  TNR_current_force.cpp
tests/_junk/: CMakeLists.txt  TNR_current_force.cpp  bench_DTMB5512_captive.cpp  bench_Ellipsoid_OMAE2014.cpp  bench_SphereDecay.cpp  bench_SphereRegular.cpp  demo_AiryIrregularWaveField.cpp  demo_FreeSurface.cpp  demo_O3_juin_2017.cpp  demo_rotation.cpp  demo_ship_orientation.cpp  dev_Carriage.cpp  test_CompositeMorisonModel.cpp  test_CurrentPolarCoeffs.cpp  test_FrCurrentStandardForce.cpp  test_FrEquilibriumFrame.cpp  test_FrWindStandardForce.cpp  test_IRF_ForwardSpeed.cpp  test_IRF_computation.cpp  test_MorisonElement.cpp  test_MorisonModel.cpp  test_TimeRecorder.cpp  test_UUID.cpp  test_WNL_and_NL_hydrostatics.cpp  test_anchored_boat_current.cpp  test_anchored_boat_current_fea_cable.cpp  test_anchored_platform_waves.cpp  test_body_mapper.cpp  test_catenary.cpp  test_cpp_yaml.cpp  test_current-wind_relative_velocity.cpp  test_current_force.cpp  test_current_standard_force.cpp  test_dispersion_relation.cpp  test_dynamic_cable.cpp  test_dynamic_wave_probe.cpp  test_eigen.cpp  test_fea_cable_with_body.cpp  test_geographicLib.cpp  test_hydrostatic_new_hdb.cpp  (+19 more)
tests/data/: DataPackager.py  DataPackagertool.py  Full.yml  PolarCurrentCoeffs.yml  TNR_database.h5  cedar.py  sphere_hdb.h5
tests/demos/: CMakeLists.txt  bench_Cables.cpp  bench_DTMB5512.cpp  bench_DTMB5512_captive.cpp  bench_Ellipsoid_OMAE2014.cpp  bench_HS_equilibrium.cpp  bench_NonlinearHydrostaticBox.cpp  bench_SphereDecay.cpp  bench_SphereIrregular.cpp  bench_SphereRegular.cpp  demo_Ballistic.cpp  demo_Body.cpp  demo_Cable.cpp  demo_Constraints.cpp  demo_Cylinder.cpp  demo_DynamicCable.cpp  demo_Environment.cpp  demo_FOSWEC.cpp  demo_FOSWEC_FlapDecay.cpp  demo_Frame_and_Rotation.cpp  demo_FreeSurface.cpp  demo_HexagonalArticulatedBuoy.cpp  demo_Hub_Installation.cpp  demo_Hub_installation.cpp  demo_Hydrodynamic.cpp  demo_Langlee.cpp  demo_Links.cpp  demo_MooringLines.cpp  demo_Morison.cpp  demo_NonLinearHydrostatics.cpp  demo_Rotation_and_Frame.cpp  demo_WNL_and_NL_hydrostatics.cpp  demo_langlee_FO3F.cpp
tests/dev_tests/: CMakeLists.txt  FEAcables.h  bench_Ellipsoid_OMAE2014.cpp  demo_WNL_and_NL_hydrostatics.cpp  dev_Carriage.cpp  dev_FrMesh.cpp  dev_IRR_motors.cpp  dev_Seafastening.cpp  how_to_cppfs.cpp  test_ANCFCable.cpp  test_COG.cpp  test_ChMarker.cpp  test_FrFileSystem.cpp  test_FrFunction.cpp  test_FrLinks.cpp  test_HS_equilibrium.cpp  test_ISIS_coupling.cpp  test_LM_element.cpp  test_WNL_and_NL_hydrostatics.cpp  test_body_mapper.cpp  test_cable_chrono.cpp  test_catenary_clump_weight.cpp  test_catenary_seabed.cpp  test_chrono_spring_bodies.cpp  test_cylinder_interaction.cpp  test_hydrostatic_new_hdb.cpp  test_link_locked.cpp  test_log.cpp  test_logging.cpp  test_lumped_mass_cable.cpp  test_radiation_model.cpp  test_spdlog.cpp  test_static_analysis.cpp
tests/hub_installation/: CMakeLists.txt  Case1_A075_T6_w025RPM.cpp  Case1_A075_T6_w025RPM_no_current_wind.cpp  Case2_A075_T6_w025RPM_with_current_wind.cpp  Case2_A150_T10_w025RPM.cpp  Case3_A075_T6_w05RPM.cpp  Case3_A075_T6_w05RPM_with_current_wind.cpp  PoC_hub_installation.cpp  PoC_hub_installation_makers.cpp  test_hub_installation.cpp
tests/refactoring/: CMakeLists.txt  demo_AiryIrregularWaveField.cpp
tests/unit_tests/: CMakeLists.txt  test_FrAssembly.cpp  test_FrBody.cpp  test_FrBody_.cpp  test_FrClippingSurface.cpp  test_FrCurrentForce.cpp  test_FrCurrentForce_.cpp  test_FrEquilibriumFrame.cpp  test_FrEquilibriumFrame_.cpp  test_FrFlowBase.cpp  test_FrFlowForce.cpp  test_FrForce.cpp  test_FrForce_.cpp  test_FrFrame.cpp  test_FrFrame_.cpp  test_FrFunction.cpp  test_FrGeographicServices.cpp  test_FrITTCResistance.cpp  test_FrInertia.cpp  test_FrKinematicStretching.cpp  test_FrLinearDamping.cpp  test_FrLinearDamping_.cpp  test_FrLinearHydrostaticForce.cpp  test_FrLinearHydrostaticForce_.cpp  test_FrLink.cpp  test_FrLinks.cpp  test_FrLoggable.cpp  test_FrManoeuvringDamping.cpp  test_FrMesh.cpp  test_FrMorisonElement.cpp  (+28 more)
(+1369 files in other folders)
